--- a/dashboard/views/games/puissance4.ejs
+++ b/dashboard/views/games/puissance4.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="<%= res.getLocale() %>">
     <head>
-        <title>Game Bot | Puissance4</title>
+        <title>Game Bot | <%= res.__("dashboard.connect4.title") %></title>
         
         <meta name="theme-color" content="<%= req.color %>">
 
@@ -13,15 +13,15 @@
 
             <%- include("../utils/notif") %>
 
-            <p class="text-center dark:text-white">Partie de <%= game.createdBy %> | Nombre de joueur <span id="playerNumber"></span>/2</p>
-            <p class="text-center dark:text-white result-turn">Attente de joueur</p>
+            <p class="text-center dark:text-white"><%= res.__("dashboard.connect4.gameOf") %> <%= game.createdBy %> | <%= res.__("dashboard.connect4.playerNumber") %> <span id="playerNumber"></span>/2</p>
+            <p class="text-center dark:text-white result-turn"><%= res.__("dashboard.connect4.waitPlayer") %></p>
             
             <div class="flex h-screen flex-grow">
                 <div class="m-auto text-center">
                     <div class="content-grid flex flex-col">
                         <!-- <button class="rounded-full w-7 h-7"></button> -->
                     </div>
-                    <button class="bg-blue text-white hover:text-black rounded-xl mx-auto w-36 h-10 hidden rematch">Revanche</button>
+                    <button class="bg-blue text-white hover:text-black rounded-xl mx-auto w-36 h-10 hidden rematch"><%= res.__("dashboard.connect4.rematch") %>></button>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                                     <i class="fas fa-exclamation-triangle"></i>
                                 </span>
                                 <span class="font-semibold mr-2 text-left flex-auto">
-                                    ${data.errorType === "notTurn" && data.finish ? "La partie est fini" : data.message}
+                                    ${data.errorType === "notTurn" && data.finish ? "<%= res.__('dashboard.connect4.gameOver') %>" : data.message}
                                 </span>
                             </div>
                         </div>
@@ -66,7 +66,7 @@
                                     <i class="fas fa-check"></i>
                                 </span>
                                 <span class="font-semibold mr-2 text-left flex-auto">
-                                    ${socket.id === data.id ? "Vous avez rejoind la partie" : `${data.player.username} a rejoin la partie`}
+                                    ${socket.id === data.id ? "<%= res.__('dashboard.connect4.youJoin') %>" : `${data.player.username} <%= res.__('dashboard.connect4.asJoin') %>`}
                                 </span>
                             </div>
                         </div>
@@ -78,7 +78,7 @@
                 document.querySelector("#playerNumber").innerText = `${data.playerNumber}`
 
                 // Update player turn
-                if (data.canStart) document.querySelector(".result-turn").innerText = data.isTurnId === socket.id ? "C'est a vous de jouer" : "C'est à l'adversaire de jouer"
+                if (data.canStart) document.querySelector(".result-turn").innerText = data.isTurnId === socket.id ? "<%= res.__('dashboard.connect4.yourTurn') %>" : "<%= res.__('dashboard.connect4.otherTurn') %>"
 
                 refreshBoard(data.board)
             })
@@ -95,7 +95,7 @@
                                         <i class="fas fa-check"></i>
                                     </span>
                                     <span class="font-semibold mr-2 text-left flex-auto">
-                                        La partie recommence !
+                                        <%= res.__("dashboard.connect4.gameRestart") %>
                                     </span>
                                 </div>
                             </div>
@@ -113,7 +113,7 @@
                                     <i class="fas fa-check"></i>
                                 </span>
                                 <span class="font-semibold mr-2 text-left flex-auto">
-                                    ${socket.id === data.player.id ? "Vous avez demander la revanche" : `${data.player.username} a demandé la revanche`}
+                                    ${socket.id === data.player.id ? "<%= res.__('dashboard.connect4.youAskRematch') %>" : `${data.player.username} <%= res.__('dashboard.connect4.otherAskRematch') %>`}
                                 </span>
                             </div>
                         </div>
@@ -139,7 +139,7 @@
                 } else rematchButton.classList.add("hidden")
 
                 if (data.win !== undefined && data.win) {
-                    document.querySelector(".result-turn").innerText = `${data.winnerId === socket.id ? "Vous avez gagner !" : "Vous avez perdu !"}`
+                    document.querySelector(".result-turn").innerText = `${data.winnerId === socket.id ? "<%= res.__('dashboard.connect4.youWin') %>" : "<%= res.__('dashboard.connect4.youLoose') %>"}`
                 
                     return
                 }
@@ -153,7 +153,7 @@
                                         <i class="fas fa-check"></i>
                                     </span>
                                     <span class="font-semibold mr-2 text-left flex-auto">
-                                        La partie est terminée
+                                        <%= res.__('dashboard.connect4.gameOver') %>
                                     </span>
                                 </div>
                             </div>
@@ -163,7 +163,7 @@
                 }
 
                 // Update the player turn
-                document.querySelector(".result-turn").innerText = `${data.isTurn === socket.id ? "C'est a vous de jouer" : "C'est à l'adversaire de jouer"}`
+                document.querySelector(".result-turn").innerText = `${data.isTurn === socket.id ? "<%= res.__('dashboard.connect4.yourTurn') %>" : "<%= res.__('dashboard.connect4.otherTurn') %>"}`
             })
 
             async function refreshNotif() {
