--- a/dashboard/views/statistics.ejs
+++ b/dashboard/views/statistics.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="<%= res.getLocale() %>">
     <head>
-        <title>Game Bot | <%= res.__("dashbord.stats.statistics")%></title>
+        <title>Game Bot | <%= res.__("dashboard.stats.statistics")%></title>
 
         <meta name="theme-color" content="<%= req.color %>">
 
